--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ authors = [
 dependencies = [
     "requests>=2.31.0",
     "cryptography>=41.0.4",
-    "mcp>=1.0.0",
+    "mcp[cli]>=1.0.0",
     "python-dotenv>=1.0.0",
 ]
 
