fix: gitignore sensitive files
- Untrack config/claude_desktop_config.json
- Untrack encryption_salt
- Untrack .python-version
- Add entries to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ build/
 
 # Credentials (never commit)
 config/credentials.json
+config/claude_desktop_config.json
+encryption_salt
+
+# Environment
+.python-version
 
 # IDE
 .idea/
